# fps_py

./: .gitignore  README.md  arduino.py  box.py  box_fragment.glsl  bullseye_live.py  create_noise.py  create_objects.py  debugger.py  fragment_shader.glsl  glut.py  image_taker.py  main.py  main_gui.py  main_old.py  moderngl_test.py  moving_bar.py  moving_box.py  noise_parallel.py  noise_test.py  noise_test_preseq.py  play_noise.py  pyproject.toml  requirements.txt  shuffle_noise.py  vertex_shader.glsl  window_settings.py
logs/: led_test.h5_2023_08_24_17_35_35.csv
src/fpspy/: _logging.py  arduino.py  bullseye_live.py  config.py  create_noise.py  debugger.py  gui.py  help_dialog.py  main.py  main_3brain.py  main_gui.py  moving_bar.py  play.py  play2.py  play_3brain.py  queue.py  shuffle_noise.py  stim.py  stimupy_test.py
src/fpspy/resources/: default_settings.toml  fragment_shader.glsl  fragment_shader_colour.glsl
