[tool.poetry]
name = "noisepy"
version = "0.1.0"
description = ""
authors = ["marvinseifert <40001645+marvinseifert@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.1"
pyserial = "^3.5"
numpy = "^1.25.2"
h5py = "^3.9.0"
moderngl = "^5.9.0"
moderngl-window = "^2.4.5"
opencv-python = "^4.8.1.78"
blosc = "^1.11.1"
hdf5plugin = "^4.2.0"
matplotlib = "^3.8.0"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
