[project]
name = "fpspy"
version = "0.1.0"
description = ""
authors = [
	{name="marvinseifert", email="<40001645+marvinseifert@users.noreply.github.com>"}
]
readme = "README.md"
requires-python = ">3.10"
dependencies = [
    "pygame >=2.5.1, <3.0.0",
    "pyserial >=3.5, <4.0",
    "numpy >=1.25.2, <2.0.0",
    "h5py >=3.9.0, <4.0.0",
    "moderngl >=5.9.0, <6.0.0",
    "moderngl-window >=2.4.5, <3.0.0",
    "opencv-python >=4.8.1.78, <5.0.0",
    "blosc >=1.11.3, <2.0.0",
    "hdf5plugin >=4.2.0, <5.0.0",
    "matplotlib >=3.8.0, <4.0.0",
    "scipy >=1.11.3, <2.0.0",
    "stimupy >=1.1.1, <2.0.0",
    "paramiko >=3.5.1, <4.0.0",
    "scpclient >=0.7, <1.0.0",
    "typer[all] (>=0.20.0,<0.21.0)",
    "platformdirs (>=4.5.0,<5.0.0)",
    "tomli (>=2.3.0,<3.0.0)",
    "tomli-w (>=1.2.0,<2.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "rich (>=14.2.0,<15.0.0)",
]

[project.optional-dependencies]
dev = [ 
	"debugpy>=1.8.16, <2.0.0",
	"pydevd-pycharm>=252.23892.515, <252.23893.0"
]

[project.scripts]
fpspy = "fpspy.main:cli"
fpspy-gui = "fpspy.main:gui"
fpspy-3brain = "fpspy.main_3brain:cli"
fpspy-info = "fpspy.main:info"

[project.gui-scripts]
fpspy-gui = "fpspy.main:gui_main"


# [tool.poetry]
# Defaults to true
# package-mode = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
